src/temp/temp.log
In file included from ./Component.hpp:2:0,
                 from ./Container.hpp:1,
                 from ./Screen.hpp:1,
                 from ./temp\temp.hpp:5,
                 from <command-line>:0:
./Listener.hpp: In member function 'virtual void Listener::onEvent(Event*)':
./Listener.hpp:8:33: warning: unused parameter 'event' [-Wunused-parameter]
     virtual void onEvent(Event *event){}
                                 ^~~~~
./Listener.hpp: In member function 'virtual void OnClickListener::onClick(MouseEvent*)':
./Listener.hpp:13:38: warning: unused parameter 'event' [-Wunused-parameter]
     virtual void onClick(MouseEvent *event){}
                                      ^~~~~
./Listener.hpp: In member function 'virtual void OnPressListener::onPress(MouseEvent*)':
./Listener.hpp:20:38: warning: unused parameter 'event' [-Wunused-parameter]
     virtual void onPress(MouseEvent *event){};
                                      ^~~~~
./Listener.hpp: In member function 'virtual void OnDragListener::onDrag(MouseEvent*)':
./Listener.hpp:27:37: warning: unused parameter 'event' [-Wunused-parameter]
     virtual void onDrag(MouseEvent *event){};
                                     ^~~~~
./Listener.hpp: In member function 'virtual void OnMoveListener::onMove(MouseEvent*)':
./Listener.hpp:34:37: warning: unused parameter 'event' [-Wunused-parameter]
     virtual void onMove(MouseEvent *event){};
                                     ^~~~~
./Listener.hpp: In member function 'virtual void OnKeyUpListener::onKeyUp(KeyboardEvent*)':
./Listener.hpp:41:41: warning: unused parameter 'event' [-Wunused-parameter]
     virtual void onKeyUp(KeyboardEvent *event){};
                                         ^~~~~
In file included from ./Container.hpp:1:0,
                 from ./Screen.hpp:1,
                 from ./temp\temp.hpp:5,
                 from <command-line>:0:
./Component.hpp: In member function 'virtual void Component::draw(int, int)':
./Component.hpp:16:26: warning: unused parameter 'rootWidth' [-Wunused-parameter]
    virtual void draw(int rootWidth, int rootHeight){}
                          ^~~~~~~~~
./Component.hpp:16:41: warning: unused parameter 'rootHeight' [-Wunused-parameter]
    virtual void draw(int rootWidth, int rootHeight){}
                                         ^~~~~~~~~~
In file included from ./Screen.hpp:1:0,
                 from ./temp\temp.hpp:5,
                 from <command-line>:0:
./Container.hpp: In member function 'virtual void Container::draw(int, int)':
./Container.hpp:18:18: warning: unused parameter 'rootWidth' [-Wunused-parameter]
    void draw(int rootWidth, int rootHeight){}
                  ^~~~~~~~~
./Container.hpp:18:33: warning: unused parameter 'rootHeight' [-Wunused-parameter]
    void draw(int rootWidth, int rootHeight){}
                                 ^~~~~~~~~~
temp\temp.cpp: In function 'void test2(Screen*)':
temp\temp.cpp:99:47: error: expected '}' at end of input
temp\temp.cpp: In member function 'virtual void test2(Screen*)::TestTextButtonListener::onClick(MouseEvent*)':
temp\temp.cpp:99:10: error: use of local variable with automatic storage from containing function
temp\temp.cpp:79:12: note: 'Label* label2' declared here
temp\temp.cpp:99:44: error: use of local variable with automatic storage from containing function
temp\temp.cpp:83:20: note: 'TextInputField* in' declared here
temp\temp.cpp:99:47: error: expected '}' at end of input
temp\temp.cpp:97:32: warning: unused parameter 'event' [-Wunused-parameter]
temp\temp.cpp: In function 'void test2(Screen*)':
temp\temp.cpp:99:47: error: expected unqualified-id at end of input
temp\temp.cpp:99:47: error: expected '}' at end of input
